dataset1235/2025-2/610742602/users/3176134714/executions/906907063_2149359571.log
== RUN (2025-08-20 22:35:33)
-- CODE: 
prin(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(90-55)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(90-55)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:35:44)
-- CODE: 
print(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:35:45)
-- CODE: 
print(90-55)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
